<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="@color/colorAccent">

    <TextView
        android:id="@+id/text_date"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:textSize="20sp"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/info_panel"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/text_date"
        app:cardElevation="2dp"
        app:cardCornerRadius="4dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:padding="3dp">


            <TextView
                android:id="@+id/currency"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="3dp"
                android:text="@string/cur_info"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/rate_nb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />




            <TextView
                android:id="@+id/rate_nb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="3dp"
                android:textSize="10sp"
                android:text="@string/n_b_u"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sale_rate"
                app:layout_constraintStart_toEndOf="@+id/currency"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/sale_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="3dp"
                android:textSize="10sp"
                android:text="@string/sale_rate_pb"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/purchase_rate"
                app:layout_constraintStart_toEndOf="@+id/rate_nb"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/purchase_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="3dp"
                android:textSize="10sp"
                android:text="@string/purchase_rate_pb"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sale_rate"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@id/get_full_list_btn"
        app:layout_constraintTop_toBottomOf="@id/info_panel"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="51dp" />


    <Button
        android:id="@+id/get_full_list_btn"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/button_style"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/much_cur"
        android:textColor="@color/colorWhite"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="2dp"
        app:layout_constraintStart_toStartOf="parent"
         />



    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/info_panel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
